# MacroPad

./: .gitignore  .gitmodules  README.md
Documentation/: BuildingInstructions.tex  UsersGuide.tex
Firmware/: CMakeLists.txt
Firmware/src/: Doxyfile.in  arrow_down.xbm  arrow_up.xbm  background_maintenance.xbm  background_mask_key_left.xbm  background_mask_key_right.xbm  background_mask_knob_press.xbm  background_normal.xbm  background_slider.xbm  bitmap.h  display.cpp  display.h  eeprom.cpp  eeprom.h  font.cpp  font.h  hid.cpp  hid.h  input.cpp  input.h  main.cpp  settings.h  settingstools.cpp  settingstools.h  tusb_config.h  usb_descriptors.cpp  usb_descriptors.h
PCB/: MacroPad.kicad_pcb  MacroPad.kicad_pro  MacroPad.kicad_sch  MacroPad.kicad_sym  MacroPad_FrontPlate.kicad_pcb  MacroPad_FrontPlate.kicad_pro  fp-lib-table  sym-lib-table
PCB/MacroPad.pretty/: ALPS_RS60112.kicad_mod  MicroSwitch.kicad_mod  OLED 1.3in.kicad_mod  RPi_Pico_SMD_TH.kicad_mod
SliderApps/: MacroPad.cpp  MacroPad.h  MacroPad.py  README.md  example.cpp  example.py
SliderApps/Krita/: MacroPad.desktop  README.md
SliderApps/Krita/MacroPad/: MacroPadPlugIn.py  Manual.html  __init__.py
SliderApps/VolumeControl/: MacroPad.py  README.md  VolumeControl.py
Software/: CMakeLists.txt  default.mp
Software/src/: Doxyfile.in  app.cpp  app.h  bin2c.cpp  bmpwidgets.cpp  bmpwidgets.h  ctrlwidgets.cpp  ctrlwidgets.h  gui.cpp  gui.fbp  gui.h  hid.cpp  hid.h  keyboard.cpp  keyboard.h  macropadwidget.cpp  macropadwidget.h  main.cpp  mainframe.cpp  mainframe.h  raiiwrapper.h  templates.cpp  templates.h  xmlfile.cpp  xmlfile.h
